--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,7 +133,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
+     packagingOptions {
+      pickFirst '**/libc++_shared.so'
+  }
     splits {
         abi {
             reset()
