--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+         maven { url 'https://nexus.scanbot.io/nexus/content/repositories/releases/' }
+        maven { url 'https://nexus.scanbot.io/nexus/content/repositories/snapshots/' }
     }
 }
