Change package name and finish feature OCR scan

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,7 +128,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.hcmus_nmcnpm_ocrscan"
+        applicationId "com.hcmus_nmcnpm_ocrscanner"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
