--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "HCMUS_NMCNPM_OCRScan",
-  "displayName": "HCMUS_NMCNPM_OCRScan"
+  "name": "HCMUS_NMCNPM_OCRScanner",
+  "displayName": "HCMUS_NMCNPM_OCRScanner"
 }
