--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HCMUS_NMCNPM_OCRScan",
+  "name": "HCMUS_NMCNPM_OCRScanner",
   "version": "0.0.1",
   "private": true,
   "scripts": {
