--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'HCMUS_NMCNPM_OCRScan' do
-  # Pods for HCMUS_NMCNPM_OCRScan
+target 'HCMUS_NMCNPM_OCRScanner' do
+  # Pods for HCMUS_NMCNPM_OCRScanner
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'HCMUS_NMCNPM_OCRScan' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'HCMUS_NMCNPM_OCRScanTests' do
+  target 'HCMUS_NMCNPM_OCRScannerTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'HCMUS_NMCNPM_OCRScan' do
   use_native_modules!
 end
 
-target 'HCMUS_NMCNPM_OCRScan-tvOS' do
-  # Pods for HCMUS_NMCNPM_OCRScan-tvOS
+target 'HCMUS_NMCNPM_OCRScanner-tvOS' do
+  # Pods for HCMUS_NMCNPM_OCRScanner-tvOS
 
-  target 'HCMUS_NMCNPM_OCRScan-tvOSTests' do
+  target 'HCMUS_NMCNPM_OCRScanner-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
