Add share feature

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'HCMUS_NMCNPM_OCRScanner' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNShare', :path => '../node_modules/react-native-share'
+
   target 'HCMUS_NMCNPM_OCRScannerTests' do
     inherit! :search_paths
     # Pods for testing
