--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-scanbot-sdk": "^4.0.0",
+    "react-native-share": "^2.0.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.0",
     "react-redux": "^7.1.3",
