Create script to start server and app at the sanme time, change import image

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "serv":"cd server/ && npm start",
     "start": "react-native start",
+    "dev":"npm run serv & npm start",
     "test": "jest",
     "lint": "eslint ."
   },
