--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "serv":"cd server/ && npm start",
+    "serv": "cd server/ && npm start",
     "start": "react-native start",
-    "dev":"npm run serv & npm start",
+    "dev": "npm run serv & npm start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.1",
@@ -23,7 +24,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
