--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.61.1",
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-image-picker": "^1.1.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-scanbot-sdk": "^4.0.0",
     "react-native-share": "^2.0.0",
